# cilindric_triangulator

./: CMakeLists.txt  README.md
models/16/: images.txt  points3D.txt  points3Dd.txt  project.ini
models/38/: images.txt  points3D.txt  points3Dd.txt
models/global/: cameras.txt  points3D.txt  points3Dd.txt  project.ini
src/: data_handler.hpp  img_vis.hpp  main.cpp  mesh_manager.hpp  pose.hpp  types.hpp  utils.hpp  viewer.hpp
